# htslib

./: .gitignore  CMakeLists.txt  bgzf.c  bgzip.c  hfile.c  tabix.c  textutils.c  thread_pool_internal.h
cram/: cram_io.c  cram_structs.h
htslib/: bgzf.h  hts.h  hts_log.h  kstring.h
liblzma/api/: lzma.h
liblzma/api/lzma/: base.h  bcj.h  block.h  check.h  container.h  delta.h  filter.h  hardware.h  index.h  index_hash.h  lzma.h  stream_flags.h  version.h  vli.h
liblzma/check/: check.h  crc32_table.c  crc64_table.c  sha256.c
liblzma/common/: alone_decoder.c  alone_encoder.c  auto_decoder.c  block_buffer_encoder.c  block_decoder.c  block_encoder.c  block_header_decoder.c  block_header_encoder.c  common.h  filter_decoder.c  filter_encoder.c  index_decoder.c  index_encoder.c  index_hash.c  sysdefs.h
liblzma/delta/: delta_common.h
liblzma/lz/: lz_decoder.h  lz_encoder.h  lz_encoder_hash.h
liblzma/lzma/: fastpos.h  fastpos_table.c  lzma2_decoder.c  lzma2_decoder.h  lzma2_encoder.c  lzma2_encoder.h  lzma_common.h  lzma_decoder.c  lzma_decoder.h  lzma_encoder.h  lzma_encoder_presets.c  lzma_encoder_private.h
liblzma/rangecoder/: range_common.h
liblzma/simple/: simple_coder.h
os/: lzma_stub.h
pthread/include/: pthread.h
pthread/src/: sched.c  thread.c
